# trappist

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build_runtimes.sh  docker-compose.yml  polkadot-launch-config.json  rust-toolchain.toml  rustfmt.toml  xcm-playground.toml  zombienet-macos
.devcontainer/: devcontainer.json
.github/templates/free-space/: action.yaml
.github/workflows/: build-runtime.yaml  build_docker.yml  check.yml  docker.yml  publish-docker.yml  simulate.yml  try-runtime.yml
contracts/rwa/: Cargo.toml  lib.rs
contracts/xcm_contract_poc/: Cargo.toml  lib.rs
docker/: docker-compose.yml  trappist-parachain.dockerfile
docker/scripts/: inject_bootnodes.sh
docs/: rust-setup.md
integration-tests/: README.md
integration-tests/asset-conversion/: 0_swap.yml
integration-tests/asset-exchange/: asset-exchange-multi-chain.yml  asset-exchange-single-chain.yml
integration-tests/asset-registry/: 0_reserve_transfer.yml
integration-tests/asset-trap/: 0_init.yml  1_trap_claim_native_asset.yml  2_trap_claim_reserved_asset.yml  3_trap_claim_native_and_reserved.yml  trap_asset_weight_limit.yml  trap_insufficient_asset.yml  trap_local_asset.yml  trap_native_asset.yml  trap_reserved_asset.yml  trap_unknown_asset.yml
integration-tests/emulated/: Cargo.toml
integration-tests/emulated/src/: lib.rs  tests.rs
integration-tests/emulated/src/tests/: misc.rs  mod.rs  reserve_asset_transfer.rs  set_xcm_version.rs  xcm_asset_trap.rs
integration-tests/reserve-transfer-asset/: 0_reserve_transfer.yml  1_reserve_transfer_two_hops.yml
integration-tests/teleport-asset/: 0_teleport.yml
nft-creator/: README.md  create-mock-nfts.ts  create-trappist-nfts.ts  mock-nft-config.json  nft-creator.ts  nft-generator.ts  package.json  trappist-nft-config.json  tsconfig.json  utils.ts
nft-creator/interfaces/: config.ts  ipfs-manager.ts  metadata-interface.ts  name-and-description.ts
node/: Cargo.toml  build.rs
node copy/cli/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: cli.rs  command.rs  lib.rs
node/service/: Cargo.toml
node/service/src/: lib.rs
node/service/src/chain_spec/: base.rs  mod.rs  stout.rs  trappist.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs  service_stout.rs
node/src/chain_spec/: mod.rs  stout.rs  trappist.rs
node/tests/: benchmark_storage_works.rs  common.rs  polkadot_argument_parsing.rs  polkadot_mdns_issue.rs  purge_chain_works.rs
pallets/asset-registry/: Cargo.toml  README.md
pallets/asset-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/asset-registry/src/mock/: constants.rs  mod.rs  parachain.rs  relay.rs  statemine.rs
pallets/asset-trap/: Cargo.toml  README.md
pallets/benchmarks/: Cargo.toml
pallets/benchmarks/src/: benchmarking.rs  lib.rs  weights.rs
pallets/lockdown-mode/: Cargo.toml  README.md
pallets/lockdown-mode/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/maintenance-mode/: Cargo.toml  README.md
pallets/maintenance-mode/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/nft-loan/: Cargo.toml
pallets/nft-loan/src/: lib.rs
pallets/proxy-teleport/: Cargo.toml
pallets/rwa-crosschain/: Cargo.toml
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs
pallets/uniques/: Cargo.toml
pallets/uniques/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  types.rs  weights.rs
pallets/uniques/src/migration/: mod.rs  v01.rs  v1.1.rs  v1.rs
pallets/withdraw-teleport/: Cargo.toml
pallets/withdraw-teleport/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
primitives/xcm/: Cargo.toml
primitives/xcm/src/: benchmarking.rs  lib.rs  mock.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml
runtime/base/: Cargo.toml
runtime/base/src/: constants.rs  contracts.rs  lib.rs  xcm_config.rs
runtime/src/: constants.rs  contracts.rs  lib.rs  xcm_config.rs  xcm_primitives.rs
runtime/stout/: Cargo.toml
runtime/stout/src/: constants.rs  contracts.rs  lib.rs  xcm_config.rs
runtime/trappist/: Cargo.toml  build.rs
runtime/trappist-common/: Cargo.toml
runtime/trappist-common/src/: impls.rs  lib.rs
runtime/trappist/src/: constants.rs  contracts.rs  impls.rs  lib.rs  xcm_config.rs
runtime/trappist/src/weights/: block_weights.rs  cumulus_pallet_xcmp_queue.rs  extrinsic_weights.rs  frame_system.rs  mod.rs  pallet_asset_registry.rs  pallet_assets.rs  pallet_balances.rs  pallet_benchmarks.rs  pallet_collator_selection.rs  pallet_collective.rs  pallet_contracts.rs  pallet_democracy.rs  pallet_dex.rs  pallet_identity.rs  pallet_lockdown_mode.rs  pallet_message_queue.rs  pallet_multisig.rs  pallet_nfts.rs  pallet_preimage.rs  pallet_safe_mode.rs  pallet_scheduler.rs  pallet_session.rs  pallet_timestamp.rs  pallet_treasury.rs  pallet_tx_pause.rs  pallet_uniques.rs  pallet_utility.rs  pallet_withdraw_teleport.rs  trappist_runtime_benchmarks.rs
runtime/trappist/src/weights/xcm/: mod.rs  pallet_xcm_benchmarks_fungible.rs  pallet_xcm_benchmarks_generic.rs
scripts/: build_runtimes.sh  docker_run.sh  hrmp_helper.sh
scripts/uniques-uploader/: Cargo.toml  nonce.txt
scripts/uniques-uploader/src/: interface.rs  main.rs
templates/: file_header.txt  xcm-bench-template.hbs
xcm-emulator/: Cargo.toml
xcm-emulator/example/: Cargo.toml
xcm-emulator/example/src/: lib.rs  relay_chain.rs  tests.rs
xcm-emulator/example/src/parachains/: asset_reserve.rs  mod.rs  stout.rs  trappist.rs
xcm-emulator/src/: lib.rs
xcm-interface/: Cargo.toml
xcm-interface/src/: lib.rs
xcm-simulator/: Cargo.toml
xcm-simulator/src/: lib.rs  relay_chain.rs  test_xcm_trap.rs  test_xcm_use_cases.rs  tests_misc.rs  tests_xcm_use_cases.rs
xcm-simulator/src/parachains/: asset_reserve.rs  base.rs  mod.rs  stout.rs  template.rs  trappist.rs
xcm-simulator/src/tests/: misc.rs  mod.rs  xcm_asset_trap.rs  xcm_use_cases.rs
zombienet/: coretime_rococo.toml  full_network.toml  stout_rococo.toml  trappist_rococo.toml  trappist_stout.toml
(+10 files in other folders)
