[workspace]
members = [
	"node",
	"runtime/stout",
	"runtime/trappist",
	"primitives/xcm",
]
exclude = [
	"xcm-simulator"
]
resolver = "2"

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.test]
debug = 0

[workspace.package]
authors = ["Trappist Network <https://github.com/TrappistNetwork>"]
homepage = "https://trappist.io"
repository = "https://github.com/TrappistNetwork/trappist"
edition = "2021"
license = "Apache License v2"


[workspace.dependencies]

# common
async-trait = "0.1"
clap = "4.3"
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
futures = "0.3"
hex-literal = "0.4"
log = { version = "0.4", default-features = false }
serde = "1.0.186"
serde_json = "1.0.104"
scale-info = { version = "2.9", default-features = false, features = ["derive"] }
smallvec = "1.11"

# Local dependencies
trappist-runtime = { path = "runtime/trappist" }
stout-runtime = { path = "runtime/stout" }
jsonrpsee = "0.16.2"

# External Dependencies
pallet-dex-rpc = { git = "https://github.com/paritytech/substrate-dex.git", default-features = false, branch = "polkadot-v1.3.0-crates" }
pallet-dex = { git = "https://github.com/paritytech/substrate-dex.git", default-features = false, branch = "polkadot-v1.3.0-crates" }
pallet-dex-rpc-runtime-api = { git = "https://github.com/paritytech/substrate-dex.git", default-features = false, branch = "polkadot-v1.3.0-crates" }

# Trappist Pallets
pallet-asset-registry = { default-features = false, path = "pallets/asset-registry" }
trappist-runtime-benchmarks = { default-features = false, path = "pallets/benchmarks" }
pallet-withdraw-teleport = { default-features = false, path = "pallets/withdraw-teleport" }

# Substrate std
try-runtime-cli = "0.35.0"
frame-benchmarking-cli = "29.0.0"
frame-rpc-system = { version = "25.0.0", package = "substrate-frame-rpc-system", default-features = false }
pallet-transaction-payment-rpc = "27.0.0"
sc-basic-authorship = "0.31.0"
sc-chain-spec = "24.0.0"
sc-consensus = "0.30.0"
sc-cli = "0.33.0"
sc-client-api = "25.0.0"
sc-executor = "0.29.0"
sc-service = "0.32.0"
sc-telemetry = "12.0.0"
sc-transaction-pool = "25.0.0"
sc-network = "0.31.0"
sc-network-sync = "0.30.0"
sc-rpc = "26.0.0"
sc-tracing = "25.0.0"
sc-sysinfo = "24.0.0"
sp-blockchain = "25.0.0"
sp-consensus = "0.29.0"
sp-keyring = "28.0.0"
substrate-prometheus-endpoint = "0.15.0"
substrate-state-trie-migration-rpc = "24.0.0"

# Substrate non-std
frame-benchmarking = { version = "25.0.0", default-features = false }
sp-io = { version = "27.0.0", default-features = false }
sp-core = { version = "25.0.0", default-features = false }
sp-session = { version = "24.0.0", default-features = false }
sp-timestamp = { version = "23.0.0", default-features = false }
sp-block-builder = { version = "23.0.0", default-features = false }
sp-keystore = { version = "0.31.0", default-features = false }
sp-offchain = { version = "23.0.0", default-features = false }
sp-api = { version = "23.0.0", default-features = false }
sp-consensus-aura = { version = "0.29.0", default-features = false }
sp-transaction-pool = { version = "23.0.0", default-features = false }
sc-transaction-pool-api = { version = "25.0.0", default-features = false }


# Substrate Runtime
sp-runtime = { version = "28.0.0", default-features = false }
sp-inherents = { version = "23.0.0", default-features = false }
sp-arithmetic = { version = "20.0.0", default-features = false }
sp-std = { version = "11.0.0", default-features = false }
sp-version = { version = "26.0.0", default-features = false }
sp-weights = { version = "24.0.0", default-features = false }

# Build Dependencies
substrate-build-script-utils = "9.0.0"
substrate-wasm-builder = "14.0.0"

## Substrate FRAME Dependencies
frame-try-runtime = { version = "0.31.0", default-features = false }
frame-executive = { version = "25.0.0", default-features = false }
frame-support = { version = "25.0.0", default-features = false }
frame-system = { version = "25.0.0", default-features = false }
frame-system-benchmarking = { version = "25.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "23.0.0", default-features = false }

## Substrate Pallet Dependencies
pallet-assets = { version = "26.0.0", default-features = false }
pallet-asset-tx-payment = { version = "25.0.0", default-features = false }
pallet-aura = { version = "24.0.0", default-features = false }
pallet-authorship = { version = "25.0.0", default-features = false }
pallet-balances = { version = "25.0.0", default-features = false }
pallet-collective = { version = "25.0.0", default-features = false }
pallet-contracts = { version = "24.0.0", default-features = false }
pallet-contracts-primitives = { version = "28.0.0", default-features = false }
pallet-democracy = { version = "25.0.0", default-features = false }
pallet-identity = { version = "25.0.0", default-features = false }
pallet-multisig = { version = "25.0.0", default-features = false }
pallet-preimage = { version = "25.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "13.0.0", default-features = false }
pallet-session = { version = "25.0.0", default-features = false }
pallet-scheduler = { version = "26.0.0", default-features = false }
pallet-sudo = { version = "25.0.0", default-features = false }
pallet-timestamp = { version = "24.0.0", default-features = false }
pallet-transaction-payment = { version = "25.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "25.0.0", default-features = false }
pallet-uniques = { version = "25.0.0", default-features = false }
pallet-utility = { version = "25.0.0", default-features = false }
pallet-treasury = { version = "24.0.0", default-features = false }
pallet-safe-mode = { version = "6.0.0", default-features = false }
pallet-tx-pause = { version = "6.0.0", default-features = false }

# Cumulus client dependencies
cumulus-client-cli = "0.4.0"
cumulus-client-collator = "0.4.0"
cumulus-client-consensus-aura = "0.4.0"
cumulus-client-consensus-relay-chain = "0.4.0"
cumulus-client-consensus-common = "0.4.0"
cumulus-client-consensus-proposer = "0.4.0"
cumulus-client-service = "0.4.0"
cumulus-client-network = "0.4.0"
cumulus-primitives-parachain-inherent = "0.4.0"
cumulus-relay-chain-interface = "0.4.0"

# Cumulus runtime dependencies
assets-common = { version = "0.4.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.4.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.4.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.4.0", default-features = false }
cumulus-pallet-xcm = { version = "0.4.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.4.0", default-features = false }
cumulus-ping = { version = "0.4.0", default-features = false }
cumulus-primitives-core = { version = "0.4.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.4.0", default-features = false }
cumulus-primitives-utility = { version = "0.4.0", default-features = false }
pallet-collator-selection = { version = "6.0.0", default-features = false }
parachains-common = { version = "4.0.0", default-features = false }
parachain-info = { package = "staging-parachain-info", version = "0.4.0", default-features = false }
cumulus-pallet-session-benchmarking = { default-features = false, version = "6.0.0" }

# Polkadot
polkadot-cli = { version = "4.0.0", features = ["rococo-native"] }
polkadot-primitives = "4.0.0"
polkadot-service = "4.0.0"
polkadot-runtime-parachains = { version = "4.0.0", default-features = false }

# Polkadot Dependencies
rococo-runtime-constants = { version = "4.0.0", default-features = false }
pallet-xcm = { version = "4.0.0", default-features = false }
polkadot-core-primitives = { version = "4.0.0", default-features = false }
polkadot-parachain-primitives = { version = "3.0.0", default-features = false }
polkadot-runtime-common = { version = "4.0.0", default-features = false }
xcm = { version = "4.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "4.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "4.0.0", package = "staging-xcm-executor", default-features = false }
xcm-primitives = { path = "primitives/xcm", default-features = false }
xcm-simulator = { version = "4.0.0", default-features = false }
pallet-xcm-benchmarks = { version = "4.0.0", default-features = false }

# Dev dependencies
assert_cmd = "2.0"
nix = "0.26"
tempfile = "3.7"
tokio = { version = "1.29", features = ["macros", "time", "parking_lot"] }
wait-timeout = "0.2"
